# HMM-for-HDD-Failure

./: .gitignore  Markov_HDD.ipynb  README.md  pyproject.toml
HMM-for-HDD-Failure/models/Failure/: smart_12_raw.pkl  smart_183_raw.pkl  smart_184_raw.pkl  smart_187_raw.pkl  smart_188_raw.pkl  smart_189_raw.pkl  smart_190_raw.pkl  smart_192_raw.pkl  smart_193_raw.pkl  smart_194_raw.pkl  smart_197_raw.pkl  smart_198_raw.pkl  smart_199_raw.pkl  smart_1_raw.pkl  smart_240_raw.pkl  smart_241_raw.pkl  smart_242_raw.pkl  smart_4_raw.pkl  smart_5_raw.pkl  smart_7_raw.pkl  smart_9_raw.pkl
HMM-for-HDD-Failure/models/Success/: smart_12_raw.pkl  smart_183_raw.pkl  smart_184_raw.pkl  smart_187_raw.pkl  smart_188_raw.pkl  smart_189_raw.pkl  smart_190_raw.pkl  smart_192_raw.pkl  smart_193_raw.pkl  smart_194_raw.pkl  smart_197_raw.pkl  smart_198_raw.pkl  smart_199_raw.pkl  smart_1_raw.pkl  smart_240_raw.pkl  smart_241_raw.pkl  smart_242_raw.pkl  smart_4_raw.pkl  smart_5_raw.pkl  smart_7_raw.pkl  smart_9_raw.pkl
HMM-for-HDD-Failure/src/: Markov_HDD.ipynb
